# aoc

./: .gitignore  Cargo.toml  README.md  aoc.rs
.fleet/: run.json
2022/1/: main.rs
2022/2/: main.rs
2022/3/: main.rs
2022/4/: main.rs
aoc-2022-1/src/: main.rs
aoc-2022-2/src/: main.rs
aoc-2022-3/src/: main.rs
aoc-2022-4/src/: main.rs
src/: main.rs  template.main.rs
