[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
toml_edit = "0.15.0"

[workspace]
members = ["aoc-2022-1", "aoc-2022-2", "aoc-2022-3", "aoc-2022-4"]
